--- a/my-orgs.html
+++ b/my-orgs.html
@@ -25,7 +25,7 @@
     <section class="dashboard-hero">
       <div>
         <p class="eyebrow">Dashboard</p>
-        <h1>Welcome back, Maya</h1>
+        <h1>Welcome back, Jonathan</h1>
         <p>Here’s what’s coming up with your organizations this week.</p>
       </div>
       <div class="stat-row">
