--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body class="page-home">
   <header class="site-header">
     <div class="logo">UCSD Orgs</div>
-    <nav class="nav-links">
+    <nav class="nav-links" data-primary-nav>
       <a class="active" href="index.html">Home</a>
       <a href="explore.html">Explore</a>
-      <a href="my-orgs.html">My Orgs</a>
+      <a href="my-orgs.html" data-auth-link hidden>My Orgs</a>
     </nav>
-    <button class="btn btn-outline">Log In</button>
+    <button class="btn btn-outline" data-auth-button>Log In</button>
   </header>
 
   <main>
