--- a/explore.html
+++ b/explore.html
@@ -175,6 +175,6 @@
     <div class="detail-tags"></div>
   </aside>
 
-  <script src="scripts.js"></script>
+  <script src="scripts.js?v=2"></script>
 </body>
 </html>
