updated search results

--- a/explore.html
+++ b/explore.html
@@ -60,6 +60,14 @@
         </div>
       </div>
     </section>
+    <section class="search-results" id="search-results" hidden>
+      <div class="section-heading">
+        <h2>Search results</h2>
+        <p class="meta" id="results-count"></p>
+      </div>
+      <div class="search-results-grid" id="results-grid"></div>
+      <p class="meta" id="results-empty" hidden>No organizations match your current search. Try adjusting keywords or filters.</p>
+    </section>
 
     <section>
       <div class="section-heading">
@@ -67,7 +75,7 @@
         <a class="link-arrow" href="#">View directory</a>
       </div>
       <div class="card-grid">
-        <article class="org-card" data-org-card data-search="triton consulting group student-run firm professional business nonprofits strategy" data-type="academic" data-participation="competitive" data-location="on-campus">
+        <article class="org-card" data-org-card data-org="Triton Consulting Group" data-description="Student-run firm offering pro-bono strategy projects for San Diego nonprofits." data-tags-list="Professional, Business" data-search="triton consulting group student-run firm professional business nonprofits strategy" data-type="academic" data-participation="competitive" data-location="on-campus">
           <div class="org-avatar">TC</div>
           <h3>Triton Consulting Group</h3>
           <p>Student-run firm offering pro-bono strategy projects for San Diego nonprofits.</p>
@@ -82,7 +90,7 @@
             data-tags="Professional, Business"
           >View Details</button>
         </article>
-        <article class="org-card" data-org-card data-search="korean dance crew choreography arts cultural workshops performances k-pop" data-type="cultural" data-participation="open" data-location="on-campus">
+        <article class="org-card" data-org-card data-org="Korean Dance Crew" data-description="Performance group hosting weekly workshops, auditions, and charity showcases." data-tags-list="Arts, Cultural" data-search="korean dance crew choreography arts cultural workshops performances k-pop" data-type="cultural" data-participation="open" data-location="on-campus">
           <div class="org-avatar">KDC</div>
           <h3>Korean Dance Crew</h3>
           <p>Performance group hosting weekly workshops, auditions, and charity showcases.</p>
@@ -97,7 +105,7 @@
             data-tags="Arts, Cultural"
           >View Details</button>
         </article>
-        <article class="org-card" data-org-card data-search="women in bioengineering mentorship stem conference lab tours" data-type="academic" data-participation="open" data-location="on-campus">
+        <article class="org-card" data-org-card data-org="Women in Bioengineering" data-description="Networking, mentorship, and lab tours connecting female-identifying engineers." data-tags-list="STEM, Mentorship" data-search="women in bioengineering mentorship stem conference lab tours" data-type="academic" data-participation="open" data-location="on-campus">
           <div class="org-avatar">WIB</div>
           <h3>Women in Bioengineering</h3>
           <p>Networking, mentorship, and lab tours connecting female-identifying engineers.</p>
@@ -112,7 +120,7 @@
             data-tags="STEM, Mentorship"
           >View Details</button>
         </article>
-        <article class="org-card" data-org-card data-search="global health brigades volunteering medical trips service latin america" data-type="service" data-participation="volunteer" data-location="off-campus">
+        <article class="org-card" data-org-card data-org="Global Health Brigades" data-description="Leads service trips focused on preventative care and public health in Latin America." data-tags-list="Service, Health" data-search="global health brigades volunteering medical trips service latin america" data-type="service" data-participation="volunteer" data-location="off-campus">
           <div class="org-avatar">GHB</div>
           <h3>Global Health Brigades</h3>
           <p>Leads service trips focused on preventative care and public health in Latin America.</p>
@@ -127,7 +135,7 @@
             data-tags="Service, Health"
           >View Details</button>
         </article>
-        <article class="org-card" data-org-card data-search="triton esports gaming tournaments league of legends rocket league" data-type="recreation" data-participation="competitive" data-location="hybrid">
+        <article class="org-card" data-org-card data-org="Triton Esports" data-description="Competitive and casual gaming community hosting scrims, tournaments, and LAN events." data-tags-list="Recreation, Esports" data-search="triton esports gaming tournaments league of legends rocket league" data-type="recreation" data-participation="competitive" data-location="hybrid">
           <div class="org-avatar">TES</div>
           <h3>Triton Esports</h3>
           <p>Competitive and casual gaming community hosting scrims, tournaments, and LAN events.</p>
