updated home page with scrolling gallery

--- a/index.html
+++ b/index.html
@@ -24,23 +24,38 @@
         <h1>Sign up for the PC West Club Fair</h1>
         <p>Reserve your slot to meet student org leaders, grab swag, and discover the communities waiting for you.</p>
         <button class="btn btn-primary" id="reserve-button">Reserve Fair Slot</button>
+        <div class="hero-card-list in-hero">
+          <article class="info-card">
+            <p class="card-label">Tuesday · Oct 15</p>
+            <p class="card-title">STEM & Innovation Fair</p>
+            <p>2:00 – 5:00 PM · PC West Lawn</p>
+          </article>
+          <article class="info-card">
+            <p class="card-label">Wednesday · Oct 16</p>
+            <p class="card-title">Culture & Identity Showcase</p>
+            <p>1:00 – 4:00 PM · PC West Ballroom</p>
+          </article>
+          <article class="info-card">
+            <p class="card-label">Thursday · Oct 17</p>
+            <p class="card-title">Recreation & Wellness Jam</p>
+            <p>11:00 AM – 2:00 PM · PC West Courts</p>
+          </article>
+        </div>
       </div>
-      <div class="hero-card-list">
-        <article class="info-card">
-          <p class="card-label">Tuesday · Oct 15</p>
-          <p class="card-title">STEM & Innovation Fair</p>
-          <p>2:00 – 5:00 PM · PC West Lawn</p>
-        </article>
-        <article class="info-card">
-          <p class="card-label">Wednesday · Oct 16</p>
-          <p class="card-title">Culture & Identity Showcase</p>
-          <p>1:00 – 4:00 PM · PC West Ballroom</p>
-        </article>
-        <article class="info-card">
-          <p class="card-label">Thursday · Oct 17</p>
-          <p class="card-title">Recreation & Wellness Jam</p>
-          <p>11:00 AM – 2:00 PM · PC West Courts</p>
-        </article>
+      <div class="hero-gallery">
+        <div class="scroll-gallery">
+          <div class="scroll-track">
+            <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=600&q=80" alt="Students gathering outdoors" />
+            <img src="https://images.unsplash.com/photo-1545239351-1141bd82e8a6?auto=format&fit=crop&w=600&q=80" alt="Students collaborating at tables" />
+            <img src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?auto=format&fit=crop&w=600&q=80" alt="Student event with booths" />
+            <img src="https://images.unsplash.com/photo-1545239351-46e761c774f2?auto=format&fit=crop&w=600&q=80" alt="Group discussion indoors" />
+            <!-- duplicate for seamless loop -->
+            <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=600&q=80" alt="" aria-hidden="true" />
+            <img src="https://images.unsplash.com/photo-1545239351-1141bd82e8a6?auto=format&fit=crop&w=600&q=80" alt="" aria-hidden="true" />
+            <img src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?auto=format&fit=crop&w=600&q=80" alt="" aria-hidden="true" />
+            <img src="https://images.unsplash.com/photo-1545239351-46e761c774f2?auto=format&fit=crop&w=600&q=80" alt="" aria-hidden="true" />
+          </div>
+        </div>
       </div>
     </section>
 
