fixed image carousel

--- a/index.html
+++ b/index.html
@@ -43,19 +43,9 @@
         </div>
       </div>
       <div class="hero-gallery">
-        <div class="scroll-gallery">
-          <div class="scroll-track">
-            <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=600&q=80" alt="Students gathering outdoors" />
-            <img src="https://images.unsplash.com/photo-1545239351-1141bd82e8a6?auto=format&fit=crop&w=600&q=80" alt="Students collaborating at tables" />
-            <img src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?auto=format&fit=crop&w=600&q=80" alt="Student event with booths" />
-            <img src="https://images.unsplash.com/photo-1545239351-46e761c774f2?auto=format&fit=crop&w=600&q=80" alt="Group discussion indoors" />
-            <!-- duplicate for seamless loop -->
-            <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=600&q=80" alt="" aria-hidden="true" />
-            <img src="https://images.unsplash.com/photo-1545239351-1141bd82e8a6?auto=format&fit=crop&w=600&q=80" alt="" aria-hidden="true" />
-            <img src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?auto=format&fit=crop&w=600&q=80" alt="" aria-hidden="true" />
-            <img src="https://images.unsplash.com/photo-1545239351-46e761c774f2?auto=format&fit=crop&w=600&q=80" alt="" aria-hidden="true" />
-          </div>
-        </div>
+        <button class="carousel-btn prev" aria-label="Previous image" data-hero-prev>&larr;</button>
+        <img class="hero-slide" id="0" src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=900&q=80" alt="Students gathering outdoors" />
+        <button class="carousel-btn next" aria-label="Next image" data-hero-next>&rarr;</button>
       </div>
     </section>
 
