added rotation to image carousel

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <button class="carousel-btn prev" aria-label="Previous image" data-hero-prev>&larr;</button>
         <img class="hero-slide" id="0" src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=900&q=80" alt="Students gathering outdoors" />
         <button class="carousel-btn next" aria-label="Next image" data-hero-next>&rarr;</button>
+        <div class="carousel-dots" data-hero-dots></div>
       </div>
     </section>
 
