replaced trending topics with calendar

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
       <div>
         <div class="section-heading">
           <h2>Upcoming Events</h2>
-          <a class="link-arrow" href="#">See calendar</a>
         </div>
         <div class="list-stack">
           <article class="event-card">
@@ -93,29 +92,52 @@
         </div>
       </div>
 
-      <aside>
+      <aside class="calendar-panel">
         <div class="section-heading">
-          <h2>Trending Topics</h2>
-          <a class="link-arrow" href="#">View all</a>
+          <h2>Calendar</h2>
         </div>
-        <ul class="trending-list">
-          <li>
-            <p>#PCWestFair</p>
-            <span class="meta">842 mentions this week</span>
-          </li>
-          <li>
-            <p>#CulturalOrgSpotlight</p>
-            <span class="meta">621 students engaged</span>
-          </li>
-          <li>
-            <p>#ClubFunding101</p>
-            <span class="meta">New guide shared</span>
-          </li>
-          <li>
-            <p>#SunGodPrep</p>
-            <span class="meta">Planning committee recruiting</span>
-          </li>
-        </ul>
+        <div class="calendar-grid">
+          <article class="calendar-day">
+            <div class="calendar-date">
+              <span class="calendar-day-num">20</span>
+              <span class="calendar-day-mon">Oct</span>
+            </div>
+            <div>
+              <p class="calendar-title">Humanities & Arts Mixer</p>
+              <p class="meta">6:30 PM · PC West Terrace</p>
+            </div>
+          </article>
+          <article class="calendar-day">
+            <div class="calendar-date">
+              <span class="calendar-day-num">24</span>
+              <span class="calendar-day-mon">Oct</span>
+            </div>
+            <div>
+              <p class="calendar-title">Leadership Bootcamp</p>
+              <p class="meta">4:00 PM · Price Center Theater</p>
+            </div>
+          </article>
+          <article class="calendar-day">
+            <div class="calendar-date">
+              <span class="calendar-day-num">27</span>
+              <span class="calendar-day-mon">Oct</span>
+            </div>
+            <div>
+              <p class="calendar-title">Service Day Planning Sprint</p>
+              <p class="meta">10:00 AM · Virtual</p>
+            </div>
+          </article>
+          <article class="calendar-day">
+            <div class="calendar-date">
+              <span class="calendar-day-num">30</span>
+              <span class="calendar-day-mon">Oct</span>
+            </div>
+            <div>
+              <p class="calendar-title">Org Officer Roundtable</p>
+              <p class="meta">5:00 PM · Zoom</p>
+            </div>
+          </article>
+        </div>
       </aside>
     </section>
   </main>
