moved browse by category section

--- a/explore.html
+++ b/explore.html
@@ -69,6 +69,22 @@
       <p class="meta" id="results-empty" hidden>No organizations match your current search. Try adjusting keywords or filters.</p>
     </section>
 
+    <section class="browse-section">
+      <div class="section-heading">
+        <h2>Browse by category</h2>
+      </div>
+      <div class="scroll-row">
+        <button class="chip-outline">Academic & Professional</button>
+        <button class="chip-outline">Greek Life</button>
+        <button class="chip-outline">Cultural</button>
+        <button class="chip-outline">Recreation & Sports</button>
+        <button class="chip-outline">Performance</button>
+        <button class="chip-outline">Service</button>
+        <button class="chip-outline">Faith-Based</button>
+        <button class="chip-outline">Media & Publications</button>
+      </div>
+    </section>
+
     <section>
       <div class="section-heading">
         <h2>Popular right now</h2>
@@ -145,22 +161,6 @@
             data-tags="Recreation, Esports"
           >View Details</button>
         </article>
-      </div>
-    </section>
-
-    <section>
-      <div class="section-heading">
-        <h2>Browse by category</h2>
-      </div>
-      <div class="scroll-row">
-        <button class="chip-outline">Academic & Professional</button>
-        <button class="chip-outline">Greek Life</button>
-        <button class="chip-outline">Cultural</button>
-        <button class="chip-outline">Recreation & Sports</button>
-        <button class="chip-outline">Performance</button>
-        <button class="chip-outline">Service</button>
-        <button class="chip-outline">Faith-Based</button>
-        <button class="chip-outline">Media & Publications</button>
       </div>
     </section>
   </main>
